--- a/sender/res/layout/fling_player_activity.xml
+++ b/sender/res/layout/fling_player_activity.xml
@@ -190,7 +190,7 @@
                 android:layout_gravity="fill"
                 android:layout_weight="1"
                 android:enabled="false"
-                android:text="@string/start" />
+                android:text="@string/load" />
 
             <Button
                 android:id="@+id/pause_play"
