--- a/receiver/res/layout/flint_container.xml
+++ b/receiver/res/layout/flint_container.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<org.xwalk.core.XWalkView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.webkit.WebView xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/container_main"
+	android:layerType="hardware"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent">
-</org.xwalk.core.XWalkView>
+</android.webkit.WebView>
